* 20190725 - [Grigori] added dummy scripts

* 20190630 - [Grigori] started preparing universal workflow for SCC

