@@ -1,0 +1,2 @@
+rm -f global.csv
+wget https://github.com/datasets/co2-fossil-global/raw/master/global.csv --no-check-certificate
