@@ -1,4 +1,5 @@
 * 20190725 - [Grigori] added dummy scripts
+                       added all CK actions to prepare, run and validate the SCC workflow
 
 * 20190630 - [Grigori] started preparing universal workflow for SCC
 
